chore: fixed z-index & added transparent overlay

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -22,7 +22,7 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.75);
-  z-index: 2;
+  z-index: 20;
   opacity: 0;
   transition: all ease .5s;
   pointer-events: none;
@@ -31,5 +31,13 @@ body {
 .overlay.active {
   opacity: 1;
   pointer-events: all;
+}
+
+.overlay.active.transparent {
+  opacity: 0;
+  z-index: 18;
+}
+
+.overlay.active.pointer {
   cursor: pointer;
 }
